RESOLVED FIXED77890
[GTK] Fix remaining errors in GTK+ WebKit2 API
https://bugs.webkit.org/show_bug.cgi?id=77890
Summary [GTK] Fix remaining errors in GTK+ WebKit2 API
Martin Robinson
Reported 2012-02-06 11:54:41 PST
WebKit2 unit tests for GTK+ did follow WebKit coding style in the past, but they do now. We should update the style bot to check these files.
Attachments
Patch (6.80 KB, patch)
2012-02-06 12:08 PST, Martin Robinson
no flags
Do not unskip WebKit1 tests (6.11 KB, patch)
2012-02-06 12:16 PST, Martin Robinson
no flags
Martin Robinson
Comment 1 2012-02-06 12:08:43 PST
WebKit Review Bot
Comment 2 2012-02-06 12:13:23 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Martin Robinson
Comment 3 2012-02-06 12:16:09 PST
Created attachment 125685 [details] Do not unskip WebKit1 tests
Gustavo Noronha (kov)
Comment 4 2012-02-06 12:19:22 PST
Comment on attachment 125685 [details] Do not unskip WebKit1 tests r=me
WebKit Review Bot
Comment 5 2012-02-06 13:01:43 PST
Comment on attachment 125685 [details] Do not unskip WebKit1 tests Clearing flags on attachment: 125685 Committed r106838: <http://trac.webkit.org/changeset/106838>
WebKit Review Bot
Comment 6 2012-02-06 13:01:48 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.