Source/WebKit2:  [GTK] Fix remaining errors in GTK+ WebKit2 API https://bugs.webkit.org/show_bug.cgi?id=77890

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-02-06
Reviewed by Gustavo Noronha Silva.

Fix some style issues in the GTK+ WebKit2 API section of the source code.

* UIProcess/API/gtk/WebKitPrivate.h:
* UIProcess/API/gtk/WebKitWebView.cpp:
* UIProcess/API/gtk/tests/TestMain.h:

Tools: [GTK] Fix remaining errors in GTK+ WebKit2 API
https://bugs.webkit.org/show_bug.cgi?id=77890

Patch by Martin Robinson <mrobinson@igalia.com> on 2012-02-06
Reviewed by Gustavo Noronha Silva.

Verify that WebKit2 GTK+ test files are not skipped during style checks.
Skip soup_server_new when checking for NULL versus 0 usage.

* Scripts/webkitpy/style/checker_unittest.py:
(CheckerDispatcherSkipTest.test_should_skip_with_warning):
* Scripts/webkitpy/style/checkers/cpp.py:
(check_for_null):

Canonical link: https://commits.webkit.org/94763@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@106838 268f45cc-cd09-0410-ab3c-d52691b4dbfc